--- a/scss/parts/kino_language_switcher.scss
+++ b/scss/parts/kino_language_switcher.scss
@@ -58,3 +58,14 @@
 	}
 
 }
+
+@media screen and (max-width: 448px) {
+
+	.kino-language-switcher {
+
+		width: 45px;
+		margin-left: 6px;
+
+	}
+
+}
